# try-out-github-workflows

./: .gitignore  setup.cfg
.github/scripts/: inject-version.sh  upload-dist-artifacts.sh
.github/workflows/: build-and-publish.yaml  build-python-package.yaml  print-env.yaml
src/dummy_package/: __init__.py
