# see https://packaging.python.org/en/latest/tutorials/packaging-projects/

[metadata]
name = rolw_dummy_package
version = 0.0.0a0
author = Roland Weber
url = https://github.com/rolandweber/try-out-github-workflows
classifiers =
    Programming Language :: Python :: 3
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
